# CRDC-Submission-Request-Agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
src/: setup.py
src/sragent_crewai/: crew.py  main.py
src/sragent_crewai/config/: agents.yaml  tasks.yaml
src/sragent_crewai/tools/: __init__.py  bedrock_decision_tool.py  click_next_tool.py  create_submission_tool.py  login_tool.py  navigate_tool.py  smart_click_tool.py  smart_fill_form_tool.py  smart_fill_section_tool.py
src/sragent_crewai/utils/: aws_client.py  field_filling.py  fill_form_set_vals.py  form_scraping.py  log_utils.py  s_fill_v1.py  s_fill_v2.py  s_fill_v3.py  session_manager.py  smart_click.py  smart_fill.py  smart_fill_logic.py
