[project]
name = "sragent_crewai"
version = "0.1.0"
description = "SRAgent_CrewAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
sragent_crewai = "sragent_crewai.main:run"
run_crew = "sragent_crewai.main:run"
train = "sragent_crewai.main:train"
replay = "sragent_crewai.main:replay"
test = "sragent_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
